# gstorm

./: CMakeLists.txt
include/: action.h  gstorm.h  view.h
include/detail/: traits.h
include/detail/actions/: gpu_transform.h  old_transform.h  transform.h
include/detail/actions/gpu/: transform.h
include/detail/algorithms/: config.h  fill.h  for_each.h  reduce.h  transform.h
include/detail/decorators/: ref.h
include/detail/operators/: async.h  copy.h  functional.h
include/detail/ranges/: index.h  vector.h
include/detail/views/: materialize.h  repeat.h  scalar.h  transform.h  vector.h  zip.h
include/meta/: static_const.h  tuple_helper.h
tests/: transform.cpp
